# uv-polylith-example

./: README.md  pyproject.toml  workspace.toml
bases/foo/api/: __init__.py  core.py
projects/api/: Dockerfile  pyproject.toml
