[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uv-workspace-polylith-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
    "polylith-cli>=1.17.0",
]

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]
