[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uv-workspace-polylith-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
]

[tool.uv]
dev-dependencies = [
    "polylith-cli>=1.17.0",
    "fastapi-cli>=0.0.5",
]

[tool.uv.workspace]
members = ["projects/*"]

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.polylith.bricks]
"bases/foo/api" = "foo/api"
